--- a/HTML_CSS/basic/kadai_015/style.css
+++ b/HTML_CSS/basic/kadai_015/style.css
@@ -1,17 +1,17 @@
 body {
     font-family: "Arial", "Meiryo", sans-serif;
+    text-align: center;
 }
 
 html {
-    font-size: 20;
-    text-align: center;
+    font-size: 20px;
 }
 
 .blue{
     color: skyblue;
 }
 .pink{
-    color: pink;
+    color: rgb(255, 192, 203);
 }
 
 h1{
