--- a/HTML_CSS/kadai_001/css/style.css
+++ b/HTML_CSS/kadai_001/css/style.css
@@ -4,6 +4,8 @@ body{
     margin: 0;
 }
 
+
+
 .header__title{
     border: solid;
 }
@@ -12,73 +14,84 @@ body{
     margin: 0 10px;
 }
 
-nav{
-    font-size: 34px;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-around;
-    margin: 20px 0;
-}
-nav a {
-    color: #000000;
-    text-decoration: none;
+/*================
+PC用のスタイル 
+=================*/
+
+@media screen and (min-width: 768px) {
+    nav{
+        font-size: 34px;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-around;
+        margin: 20px 0;
+    }
+    nav a {
+        color: #000000;
+        text-decoration: none;
+    }
+
+    .MV img{
+        width: 100%;
+    }
+
+    h1{
+        font-size: 34px;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    #about{
+        margin: 30px auto;
+    }
+
+    .about__main{
+        display: flex;
+        justify-content: center;
+    }
+
+    .about__main > div {
+        margin-left:50px;
+    }
+    .about__avatar--image {
+        margin-right:50px;
+        border-radius:150px
+    }
+
+    #about > h2{
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+    .About__title{
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    .works__container img{
+        width: 240px;
+    }
+
+    .works__container p{
+        width: 240px;
+    }
+    .works__container div{
+        margin: 0 20px;
+    }
+
+    .works__container{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    #copyright{
+        text-align: center;
+        font-size: 18px;
+    }
 }
 
-.MV img{
-    width: 100%;
-}
+@media screen and (max-width: 767px) {
 
-h1{
-    font-size: 34px;
-    font-weight: bold;
-    text-align: center;
-}
-
-#about{
-    margin: 30px auto;
-}
-
-.about__main{
-    display: flex;
-    justify-content: center;
-}
-
-.about__main > div {
-    margin-left:50px;
-}
-.about__avatar--image {
-    margin-right:50px;
-    border-radius:150px
-}
-
-#about > h2{
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.About__title{
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.works__container img{
-    width: 240px;
-}
-
-.works__container p{
-    width: 240px;
-}
-.works__container div{
-    margin: 0 20px;
-}
-
-.works__container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-#copyright{
-    text-align: center;
-    font-size: 18px;
+    
 }
