--- a/React_Udemy_lesson1/vite-project/src/App.css
+++ b/React_Udemy_lesson1/vite-project/src/App.css
@@ -1,42 +1,67 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+    font-family: sans-serif;
+    color: #666666;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input {
+    border-radius: 8px;
+    border: none;
+    padding: 6px 16px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    border-radius: 8px;
+    border: none;
+    padding: 4px 16px;
+    margin: 0px 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button:hover{
+    background-color: #79a8a9;
+    color: #ffffff;
+    cursor: pointer;
 }
 
-.card {
-  padding: 2em;
+.input-area {
+    background-color: #c6e5d9;
+    width: 400px;
+    height: 30px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 8px;
+
 }
 
-.read-the-docs {
-  color: #888;
+.incomplete-area{
+    border: 2px solid #aacfd0;
+    width: 400px;
+    min-height: 200px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.complete-area{
+    border: 2px solid #aacfd0;
+    width: 400px;
+    min-height: 200px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 8px;
+    background-color: #c9dede;
+}
+
+.title{
+    text-align: center;
+    margin-top: 0px;
+    font-weight: bold;
+}
+
+.list-row{
+    display: flex;
+    align-items: center;
+}
+
+.todo-item{
+    margin: 6px;
 }
